--- a/ejendomsmæglere.html
+++ b/ejendomsmæglere.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
+
 <head>
     <title>Hjortshøj Grundejerforening</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <h1>Hjortshøj Grundejerforening</h1>
-    <ul>
-        <li><a href="index.html">Om foreningen</a></li>
-        <li><a href="vedtægter.html">Vedtægter</a></li>
-        <li><a href="bestyrelsen.html">Bestyrelsen</a></li>
-        <li><a href="referater.html">Referater</a></li>
-        <li><a href="regnskab.html">Regnskab</a></li>
-        <li><a href="ejendomsmæglere.html">Til ejendomsmæglere</a></li>
-    </ul>
+    <sidebar>
+        <img src="images/logo.png" />
+        <toggle>
+            <bar></bar>
+            <bar></bar>
+            <bar></bar>
+        </toggle>
+        <a href="index.html">Om foreningen</a>
+        <a href="vedtægter.html">Vedtægter</a>
+        <a href="bestyrelsen.html">Bestyrelsen</a>
+        <a href="referater.html">Referater</a>
+        <a href="regnskab.html">Regnskab</a>
+        <a href="ejendomsmæglere.html">Til ejendomsmæglere</a>
+        <script type="text/javascript">
+            let toggle = document.querySelector("toggle")
+            let sidebar = document.querySelector("sidebar")
+            toggle.onclick = () => { sidebar.classList.toggle("open") }
+        </script>
+    </sidebar>
+    <page>
+        <article>
+            <h1>Hjortshøj Grundejerforening</h1>
+            <h2>Til ejendomsmæglere</h2>
+        </article>
+    </page>
 </body>
+
 </html>
