--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="bestyrelsen.html">Bestyrelsen</a>
         <a href="referater.html">Referater</a>
         <a href="regnskab.html">Regnskab</a>
-        <a href="ejendomsmæglere.html">Til ejendomsmæglere</a>
+        <a href="henvendelser.html">Henvendelser</a>
         <script type="text/javascript">
             let toggle = document.querySelector("toggle")
             let sidebar = document.querySelector("sidebar")
@@ -39,6 +39,7 @@
             <p>Grundejerforeningen består af 91 parceller fordelt på Bygbjerg, Georgsmindevej, dele af Sastrupvej og Løvagervej, samt fire parcelle på Hundkærvej.</p>
             <p>Grundejerforeningen ejer fællesarealet med legepladsen på Mejlbyvej 370. Alle veje, med undtagelse af Hundkærvej, der hører under grundejerforeningen er private veje. Grundejerforeningen har en vejfond der dækker vedligehold af disse.</p>
             <p>Der afholdes en årlig generalforsamling i foråret. Derudover arrangeres der arbejdsdag(e) og sommerarrangement efter behov.</p>
+            <p>En samlet liste over de parceller der er medlem kan hentes på <a href="./documents/medlemsparceller.pdf" target="_blank">dette link.</a></p>
 
             <!-- Importerer geografiske data for grundejer foreningen -->
             <script src="./scripts/map/geodata.renset.js"></script>
