--- a/regnskab.html
+++ b/regnskab.html
@@ -20,7 +20,7 @@
         <a href="bestyrelsen.html">Bestyrelsen</a>
         <a href="referater.html">Referater</a>
         <a href="regnskab.html">Regnskab</a>
-        <a href="ejendomsmæglere.html">Til ejendomsmæglere</a>
+        <a href="henvendelser.html">Henvendelser</a>
         <script type="text/javascript">
             let toggle = document.querySelector("toggle")
             let sidebar = document.querySelector("sidebar")
